user update and delete API
